--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,19 @@
+importFrom(utils,head)
+importFrom(utils,tail)
+importFrom(stats,coef)
+importFrom(stats,predict)
+importFrom(miscTools,stdEr)
+importFrom(MASS,lda)
+importFrom(MASS,qda)
+
 export(IData, RepLOptim, DACrossVal)
 exportClasses(IData,IdtE,IdtSngDE,IdtMxE,IdtSngNDE,IdtMxNDE,LRTest,ConfTests,IdtMANOVA,IdtClMANOVA,IdtHetNMANOVA,Idtlda,Idtqda)
 exportPattern("*.IData")
 exportMethods(show,summary,head,tail,nrow,ncol,mle,coef,stdEr,testMod,BestModel,MANOVA,lda,qda,predict,testMod)
+
+S3method(print,summaryIData)
+S3method("[",IData)
+S3method("[<-",IData)
+S3method("==",IData)
+S3method("!=",IData)
 
