--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: MAINT.Data
 Type: Package
-Title: Model and Analize Interval Data
-Version: 0.2
-Date: 2011-11-07
+Title: Model and Analyse Interval Data
+Version: 0.3
+Date: 2014-10-24
 Author: Pedro Duarte Silva <psilva@porto.ucp.pt> Paula Brito <mpbrito.fep.up.pt>
 Maintainer: Pedro Duarte Silva <psilva@porto.ucp.pt>
-Description: MAINT.Data implements methodologies for modelling Interval Data, considering five different possible configurations structures for the variance-covariance matrix.
+Description: MAINT.Data implements methodologies for modelling interval data, considering appropriate parameterizations of the variance-covariance matrix that take into account the intrinsic nature of interval data, and lead to five different possible configuration structures.
 License: GPL-2
 LazyLoad: yes
 LazyData: yes
-Depends: R (>= 2.8.0), MASS, sn, methods, miscTools
-Packaged: 2011-11-07 15:13:07 UTC; apedro
+Depends: R (>= 2.8.0)
+Imports: MASS, methods, miscTools
 Repository: CRAN
-Date/Publication: 2011-11-07 16:23:46
+Packaged: 2014-10-24 19:12:21 UTC; apedro
+NeedsCompilation: no
+Date/Publication: 2014-10-25 01:27:10
