--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: MAINT.Data
 Type: Package
 Title: Model and Analyse Interval Data
-Version: 0.3
-Date: 2014-10-24
+Version: 0.4
+Date: 2015-05-03
 Author: Pedro Duarte Silva <psilva@porto.ucp.pt> Paula Brito <mpbrito.fep.up.pt>
 Maintainer: Pedro Duarte Silva <psilva@porto.ucp.pt>
-Description: MAINT.Data implements methodologies for modelling interval data, considering appropriate parameterizations of the variance-covariance matrix that take into account the intrinsic nature of interval data, and lead to five different possible configuration structures.
+Description: Implements methodologies for modelling interval data, considering appropriate parameterizations of the variance-covariance matrix that take into account the intrinsic nature of interval data, and lead to five different possible configuration structures.
 License: GPL-2
 LazyLoad: yes
 LazyData: yes
 Depends: R (>= 2.8.0)
-Imports: MASS, methods, miscTools
+Imports: methods
+Suggests: MASS, miscTools
 Repository: CRAN
-Packaged: 2014-10-24 19:12:21 UTC; apedro
 NeedsCompilation: no
-Date/Publication: 2014-10-25 01:27:10
+Packaged: 2015-05-03 17:35:40 UTC; apedro
+Date/Publication: 2015-05-04 01:27:54
