--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,6 @@
 import(methods)
-importFrom(utils,head)
-importFrom(utils,tail)
-importFrom(stats,coef)
-importFrom(stats,predict)
-
+importFrom(utils,head,tail)
+importFrom(stats,coef,predict,nlm,nlminb,optim,pchisq,qnorm,runif,sd,var)
 export(IData, RepLOptim, DACrossVal)
 exportClasses(IData,IdtE,IdtSngDE,IdtMxE,IdtSngNDE,IdtMxNDE,LRTest,ConfTests,IdtMANOVA,IdtClMANOVA,IdtHetNMANOVA,Idtlda,Idtqda)
 exportPattern("*.IData")
