--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: MAINT.Data
 Type: Package
 Title: Model and Analyse Interval Data
-Version: 0.4
-Date: 2015-05-03
-Author: Pedro Duarte Silva <psilva@porto.ucp.pt> Paula Brito <mpbrito.fep.up.pt>
+Version: 0.5
+Date: 2015-10-18
+Author: Pedro Duarte Silva <psilva@porto.ucp.pt>, Paula Brito <mpbrito.fep.up.pt>
 Maintainer: Pedro Duarte Silva <psilva@porto.ucp.pt>
 Description: Implements methodologies for modelling interval data, considering appropriate parameterizations of the variance-covariance matrix that take into account the intrinsic nature of interval data, and lead to five different possible configuration structures.
 License: GPL-2
@@ -14,5 +14,5 @@ Imports: methods
 Suggests: MASS, miscTools
 Repository: CRAN
 NeedsCompilation: no
-Packaged: 2015-05-03 17:35:40 UTC; apedro
-Date/Publication: 2015-05-04 01:27:54
+Packaged: 2015-10-18 16:56:59 UTC; antonio
+Date/Publication: 2015-10-19 08:41:36
